2008-04-03  David Bateman  <dbateman@free.fr>

	* plot/__scatter__.m: correct indexing of cdata.x

2009-04-03  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminunc.m: New function.
	* optimization/Makefile.in: Update.
	* optimization/__dogleg__: Allow general quadratics.

2009-04-02  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Include gnuplot command termination when
	plotting image.

2009-04-02  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Fix title placement for gnuplot 4.2.x.

2009-04-02  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fsolve.m: Fix test.

2009-03-30  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: New subfunction create_fontspec(). Allow
	fontsize to be specified when the fontname is anonymous.

2009-03-30  Ben Abbott <bpabbott@mac.com>

	* plot/__gnuplot_default_font__.m: New function: determine gnuplot's
	terminal dependent default font.
	* plot/__go_draw_figure__.m: Substitute gnuplot default font when
	"fontname" = "*".

2009-03-29  John W. Eaton  <jwe@octave.org>

	* testfun/Makefile.in (SOURCES): Add rundemos.m to the list.

2009-03-29  Ben Abbott <bpabbott@mac.com>

	* plot/print.m: For eps output the bounding box should represent the
	figure's position.

2009-03-28  Ben Abbott <bpabbott@mac.com>

	* plot/gnuplot_drawnow.m: Always set figure property "__plot_stream__"
	to the active gnuplot steam. Permits __gnuplot_get_var__ to return to
	proper result for all gnuplot streams.

2009-03-27  Ben Abbott <bpabbott@mac.com>

	* plot/__go_draw_axes__.m: Properly position the title for 3D plots
	when using the gnuplot (v4.3+) backend.

2009-03-27  Jaroslav Hajek  <highegg@gmail.com>

	* linear-algebra/expm.m: Fix order of outputs from balance.

2009-03-25  Kai Habel  <kai.habel@gmx.de>

	* general/gradient.m: Fix calculation for more than two
	dimensions.  Change interpretation of vector arguments from
	spacing to coordinates.  New tests.

2009-03-25  John W. Eaton  <jwe@octave.org>
